Don't glob source files
This is a notorious CMake debate but I come down on the side of
strict correctness and avoid globbing. For a template project like
this where users are prone to be adding new source files regularly,
I worry that even with CONFIGURE_DEPENDS they may still have issues
with CMake not reconfiguring and not picking up the new .cpp file
they added. I'd prefer to leave globbing to experienced CMake users
who are likely not the audience of this template project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,8 @@ cmake_minimum_required(VERSION 3.15)
 
 project(CMakeSFMLProject LANGUAGES CXX)
 
-# Find all source files
-file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/src/*.hpp)
-
 # Tell CMake to build a executable
-add_executable(CMakeSFMLProject ${SOURCE_FILES})
+add_executable(CMakeSFMLProject src/main.cpp)
 
 # CMake SFML Project uses C++17 features
 target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
