--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,8 @@ jobs:
 
     - name: Configure
       shell: bash
-      run: cmake -S . -B build -DCMAKE_INSTALL_PREFIX=install ${{matrix.platform.flags}} ${{matrix.config.flags}}
+      run: cmake -B build ${{matrix.platform.flags}} ${{matrix.config.flags}}
 
     - name: Build
       shell: bash
       run: cmake --build build --config Release
-
-    - name: Install
-      shell: bash
-      run: cmake --install build --config Release
